# sheikah-banner

./: README.md  main.py  pyproject.toml
font/: readme.txt
